--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "feedparser>=6.0.11",
     "loguru>=0.7.3",
     "pydantic-settings>=2.8.1",
+    "pymongo[srv]>=4.11.3",
     "python-telegram-bot>=22.0",
 ]
 
