--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "telegram-bot-example"
+name = "telegram-bot"
 version = "0.1.0"
-description = "Add your description here"
+description = "A telegram bot for parsing RSS feeds."
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
     "feedparser>=6.0.11",
     "loguru>=0.7.3",
@@ -18,6 +18,3 @@ dev = [
     "pytest-asyncio>=0.25.3",
     "pytest>=8.3.5",
 ]
-
-[tool.ruff]
-line-length=79
